# Meta-Spatial-SDK-Samples

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  notices.html
AnimationsSample/: README.md  settings.gradle.kts
BodyTrackingSample/: gradlew.bat  settings.gradle.kts
CustomComponentsSample/: build.gradle.kts  gradlew.bat  settings.gradle.kts
FeatureDevSample/: build.gradle.kts  settings.gradle.kts
FeatureDevSample/nativefeature/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro
FeatureDevSample/nativefeature/src/androidTest/java/com/meta/spatial/samples/nativefeature/: ExampleInstrumentedTest.kt
FeatureDevSample/nativefeature/src/main/components/: components.xml
FeatureDevSample/nativefeature/src/main/cpp/: native_bobbing.cpp
FeatureDevSample/nativefeature/src/main/java/com/meta/spatial/samples/nativefeature/: NativeBobbingFeature.kt  NativeBobbingSystem.kt
FeatureDevSample/nativefeature/src/test/java/com/meta/spatial/samples/nativefeature/: ExampleUnitTest.kt
HybridSample/: AGENTS.md  README.md  build.gradle.kts  settings.gradle.kts
MediaPlayerSample/: .gitignore  README.md  settings.gradle.kts
MixedRealitySample/: README.md  gradle.properties  settings.gradle.kts
MrukSample/: README.md  gradle.properties  settings.gradle.kts
Object3DSample/: settings.gradle.kts
Object3DSampleIsdk/: README.md  settings.gradle.kts
PhysicsSample/: README.md  settings.gradle.kts
PremiumMediaSample/: .gitignore  README.md  settings.gradle.kts
SpatialVideoSample/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
(+1641 files in other folders)
